--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dependencies": "0.0.1",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
@@ -22,6 +23,7 @@
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0"
   }
 }
