--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10.3.0"
   },
   "scripts": {
+    "dev": "nodemon --watch src src/server.js",
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,5 +31,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
